templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations: {}
  labels:
    app: spring-db-demo
    app.kubernetes.io/component: spring-db-demo
    app.kubernetes.io/instance: spring-db-demo
    app.kubernetes.io/name: java
    app.kubernetes.io/part-of: spring-db-demo-app
    app.openshift.io/runtime: java
    app.openshift.io/runtime-version: openjdk-8
  name: spring-db-demo
spec:
  ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    - name: 8778-tcp
      port: 8778
      protocol: TCP
      targetPort: 8778
  selector:
    app: spring-db-demo
    deploymentconfig: spring-db-demo
  sessionAffinity: None
  type: ClusterIP
